minor suit slam tries

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -426,6 +426,8 @@ pass, or bid 3NT with (e.g.) Kxx in the suit.
 
 \item 3$\diamondsuit$ is 5--5 in the majors, at least invitational.
 
+\item 3$\heartsuit$/3$\spadesuit$ are slam tries in clubs and diamonds.
+
 \item 4N is blackwood.
 
 \item 2$\clubsuit$ is where it gets distinctive.  This is 5-card modified puppet Keri, which allows the system to be used with weak diamond hands with tolerance for at least one major (e.g. 4=0=6=3 pattern with very limited values).
