Updating action after 1C-overcall

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -36,7 +36,7 @@ system.  We fell back upon a strong club structure.
 Given the strong $\clubsuit$ structure, we then looked at our other opening bids.  Our
 2-level openers are pre-emptive, and show either single-suiters or two-suiters.
 This is based upon the Suction convention: 2$\clubsuit$ shows $\diamondsuit$ or both majors, 2$\diamondsuit$ shows
-$\diamondsuit$ or $\spadesuit$\&$\clubsuit$, 2$\heartsuit$ shows $\spadesuit$ or $\clubsuit$\&$\diamondsuit$, and 2$\spadesuit$ shows $\heartsuit$ and a minor.  We don't have a way
+$\heartsuit$ or $\spadesuit$\&$\clubsuit$, 2$\heartsuit$ shows $\spadesuit$ or $\clubsuit$\&$\diamondsuit$, and 2$\spadesuit$ shows $\heartsuit$ and a minor.  We don't have a way
 to show a $\spadesuit$\&$\diamondsuit$ two-suiter; this is a likely future use for 2NT.
 
 Major suit openings are played as takeout bids.  This means that 1$\spadesuit$ promises 5+
@@ -785,7 +785,7 @@ are lebensohl responses. 4N is takeout over 4$\spadesuit$ and a big two suiter o
    \item Responder's double creates a game-force.
    \item 1NT promises a stop; 8--14 balanced.
    \item Suit bids are natural, 8--14.
-   \item Exception: cheapest bid (or 2$\spadesuit$ over 1$\spadesuit$) shows a 12-14 balanced hand with no stop.  System is on, including Keri, transfers etc.  After 1$\clubsuit$-(1$\diamondsuit$)-1$\heartsuit\, for example, 1$\spadesuit\ is a range enquiry or transfer to $\clubsuit$.
+   \item Exception: cheapest bid (or 2$\spadesuit$ over 1$\spadesuit$) shows a 12-14 balanced hand with no stop.  System is on, including Keri, transfers etc.  After 1$\clubsuit$-(1$\diamondsuit$)-1$\heartsuit$, for example, 1$\spadesuit$ is a range enquiry or transfer to $\clubsuit$.
    \item Pass is a weak hand with nowhere to go (potentially including an 8--11 balanced hand with no stop).
 	\end{itemize}
 \end{itemize}
