transfer weak jump shifts

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -175,10 +175,12 @@ Higher-level openings & natural. \\
       \item 1NT rebid = 12--15 balanced; see ``Continuations after 1NT".
       \item minor suit bids deny a 4-card major.
 		\end{itemize}
-   \item 2x = 6+ card suit, 0--7. Non-forcing.
+   \item 1N/2x = transfer weak jump shift 6+ card suit above, 0--7.
 		\begin{itemize}
-      \item Opener will pass unless holding something exciting in context.
-         Principle: find a fit and find a level. No close games at matchpoints.
+		\item Complete the transfer with nothing more to say
+		\item 2N = extra values, nothing in the transfer suit
+		\item Jump-completion = good support, invitational
+		\item new suits = extras, tolerance, side suit
 		\end{itemize}
 	\end{itemize}
 
@@ -200,9 +202,13 @@ Higher-level openings & natural. \\
       \item Jump suit rebids are GF, single-suited.
       \item 2NT rebid = 20--23 balanced; see ``Continuations after 2NT".
 		\end{itemize}
-   \item 2x = 6+ card suit, 0--7. Non-forcing.
+   \item 1N/2x = transfer weak jump shift 6+ card suit above, 0--7.
 		\begin{itemize}
-      \item Opener will pass unless holding something exciting in context.
+		\item Complete the transfer with nothing more to say
+		\item 2N = extra values, nothing in the transfer suit
+		\item Jump-completion = good support, invitational
+		\item new suits = extras, tolerance, side suit
+		\item jump new suit = GF single suiter
 		\end{itemize}
 	\end{itemize}
 
@@ -384,8 +390,6 @@ Higher-level openings & natural. \\
 		\item 5$\clubsuit$/$\diamondsuit$: singleton in the other suit
 		\end{itemize}
 	\end{itemize}
-
-\newpage
 
 \item 4NT:
 	\begin{itemize}
