--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -165,14 +165,26 @@ Higher-level openings & natural. \\
 \begin{itemize}
 \item 1$\clubsuit$:
 	\begin{itemize}
-   \item 1$\diamondsuit$ = 0--7, no 6-card suit
-   \item 1$\heartsuit$ = 8--15 any
+   \item 1$\diamondsuit$ = 0--9, no 6-card suit
+		\begin{itemize}
+      \item suits = unbalanced, possible canape
+      \item 1NT = 12--15 balanced; responses weak takeout.
+		\end{itemize}
+   \item 1$\heartsuit$ = 10--15 any
+		\begin{itemize}
+      \item 1$\spadesuit$ = any 10-11
+      \item 1NT = 12--15 balanced; see ``Continuations after 1NT".
+      \item 2 major suit bids 12-15 unbal and promise exactly 4; either 4-4-4-1
+            with singleton other major or has a longer minor (as there's no other
+            hand shape that fits the opening and has exactly one 4-card major)
+      \item 2 minor suit bids deny a 4-card major and are 12-15 unbal.
+		\end{itemize}
    \item 1$\spadesuit$ = 15+ any, game-forcing.
 		\begin{itemize}
       \item major suit bids promise exactly 4; either 4-4-4-1 with singleton other
          major or has a longer minor (as there's no other hand shape that fits the
          opening and has exactly one 4-card major)
-      \item 1NT rebid = 12--15 balanced; see ``Continuations after 1NT".
+      \item 1NT = 12--15 balanced; see ``Continuations after 1NT".
       \item minor suit bids deny a 4-card major.
 		\end{itemize}
    \item 1N/2x = transfer weak jump shift 6+ card suit above, 0--7.
@@ -775,8 +787,8 @@ are lebensohl responses. 4N is takeout over 4$\spadesuit$ and a big two suiter o
 	\begin{itemize}
    \item Redouble creates a game-force; passes are now forcing and doubles are for penalty.
    \item Pass shows a weak hand, with nowhere in particular to play.
-   \item Suit bids are natural, 8--14, and promise 4 cards.
-   \item 1NT shows a balanced hand, 8--14, with a club stop.
+   \item Suit bids are natural, 10--15, and promise 4 cards.
+   \item 1NT shows a balanced hand, 10--15, with a club stop.
 	\end{itemize}
 \item 1$\clubsuit$-(X) (takeout):
 	\begin{itemize}
@@ -787,9 +799,9 @@ are lebensohl responses. 4N is takeout over 4$\spadesuit$ and a big two suiter o
 \item 1$\clubsuit$-(natural bid):
 	\begin{itemize}
    \item Responder's double creates a game-force.
-   \item 1NT promises a stop; 8--14 balanced.
-   \item Suit bids are natural, 8--14.
-   \item Exception: cheapest bid (or 2$\spadesuit$ over 1$\spadesuit$) shows a 12-14 balanced hand with no stop.  System is on, including Keri, transfers etc.  After 1$\clubsuit$-(1$\diamondsuit$)-1$\heartsuit$, for example, 1$\spadesuit$ is a range enquiry or transfer to $\clubsuit$.
+   \item 1NT promises a stop; 10--15 balanced.
+   \item Suit bids are natural, 10--15.
+   \item Exception: cheapest bid (or 2$\spadesuit$ over 1$\spadesuit$) shows a 12-15 balanced hand with no stop.  System is on, including Keri, transfers etc.  After 1$\clubsuit$-(1$\diamondsuit$)-1$\heartsuit$, for example, 1$\spadesuit$ is a range enquiry or transfer to $\clubsuit$.
    \item Pass is a weak hand with nowhere to go (potentially including an 8--11 balanced hand with no stop).
 	\end{itemize}
 \end{itemize}
@@ -835,6 +847,30 @@ are lebensohl responses. 4N is takeout over 4$\spadesuit$ and a big two suiter o
 \item 1$\clubsuit$-(P)-1$\diamondsuit$-(anything): it's a good idea to subside quietly.  
 
 \item 1$\clubsuit$-(P)-1$\heartsuit$-(anything): passes are non-forcing. 
+\end{itemize}
+
+\subsection{Interference over a 2-level opening}
+
+A few general principles here:
+
+\begin{itemize}
+\item 2x-(X):
+   \begin{itemize}
+      \item XX: forcing enquiry (even over further interference)
+      \item Pass: no desire to play opposite a weak hand
+      \item Relay: some tolerence for the weak options
+      \item Enquiries: forcing unless oppo bid
+   \end{itemize}
+\item 2x-(2y):
+   \begin{itemize}
+      \item X: optional (pass if it's your suit, pull otherwise)
+      \item \ldots
+   \end{itemize}
+\item Opener's rebids facing passed responder:
+   \begin{itemize}
+   \item Suit from a weak option at the lowest level: decent weak option
+   \item X/denied suit/NT: strong option (X is optional)
+   \end{itemize}
 \end{itemize}
 
 \section{Carding}
