spade for a laugh defence

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -825,6 +825,11 @@ are lebensohl responses. 4N is takeout over 4$\spadesuit$ and a big two suiter o
 		\end{itemize}
    \item Suit bids are natural, weak, 6-card suit.
 	\end{itemize}
+\item 1$\diamondsuit$-(spade for a laugh):
+	\begin{itemize}
+   \item Double is for penalties
+   \item Passes are forcing
+	\end{itemize}
 \end{itemize}
 
 \subsection{Balancing-seat interference (e.g. 1$\diamondsuit$-(P)-1$\spadesuit$-(2$\clubsuit$))}
