remove artificial overcalls

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -694,36 +694,33 @@ from all numbers.
 
 \section{Competitive bidding}
 
-Overcalls are constructive and for takeout, promising the two unbid suits (at least 5--4).
-Where opponents have shown two suits, overcalls are natural.
+We tried an artificial overcall scheme but found it couldn't cope with a number of situations.
+Therefore, we have a fairly natural overcall style.
 
-When responding to an overcall, a bid of one of the suits is simply competitive
-and showing preference.  A good raise of the cheaper suit can be shown with the
-cheaper cuebid, and a good raise of the other suit can be shown with the other
-cuebid.  
+Simple overcalls are constructive and natural. In response, if 1N is available,
+then 2N is a crypto raise. In all cases a responsive cue is a good raise and direct
+raises are preemptive.
 
-Similarly, 1NT and 2NT can be used as encrypted raises of the cheaper and
-higher suits respectively.
+Double is standard takeout (or a strong hand).
 
-
-This means that a double needs to include the possibility of a single-suited
-hand, on which one might make a natural overcall.  Responder should make the
-cheapest bid if holding a very weak hand.
-
-All strong hands are shown via an immediate cuebid of opponent's suit.  Again,
-a next-step response is negative.
-
-Two-suited pre-emptive hands can be shown via 2NT.  It is worth noting that
-this is the Tom Jones 2NT: It's Not Unusual.  This promises both majors over a
-minor-suit opening, or the other major and an unspecified minor over a
-minor-suit opening.  
+Direct 1NT is 15-17 balanced with a stop, protective 1NT is 11-14 with a stop. 
+After these ``Continuations after 1NT'' apply. 
 
 Jump overcalls are weak; jump overcalls of a major suit over a minor-suit
 opening may include the other minor (possible canape).  Similarly, jump
 overcalls of 3$\clubsuit$ over a 1 of a major opening could include $\diamondsuit$.
 
+In pass-out seat jump overcalls are intermediate. Also, after the sequence
+(Pass)-Pass-(1N).
+
 Jump cuebids are stopper-asking for 3NT; they promise a long running suit.  An
 overcall of 3NT promises a long running suit and a stopper.
+
+Simple cuebids are Michaels showing at least 5--5 in the majors (over a minor)
+or the other major and either minor (over a major). In all cases they are
+either weak or strong. Similarly, 2NT over a 1 level bid is unusual, showing
+5--5 or better in the minors (over a major) or the other minor and either major
+(over a minor). Again, it's weak or strong.
 
 \subsection{Defences}
 
@@ -768,7 +765,11 @@ Dixon:
 \subsubsection{Natural weak openings}
 
 Double is for takeout up to 4$\heartsuit$. After a weak two and a takeout double, there
-are lebensohl responses. 4N is takeout over 4$\spadesuit$ and a big two suiter otherwise.
+are Lebensohl responses. 4N is takeout over 4$\spadesuit$ and a big two suiter otherwise.
+
+Over a weak two,  2NT is natural showing 16-18 and ``Continuations after 2NT''
+apply.
+
 
 \section{Dealing with interference}
 
@@ -845,9 +846,9 @@ are lebensohl responses. 4N is takeout over 4$\spadesuit$ and a big two suiter o
 	\begin{itemize}
       \item Responder's NT bids here are Lebensohl style
       \item There are no weak hands to show, so the only difference is in showing/denying a stopper.
-		\end{itemize}
-   \item Double is penalties.
 	\end{itemize}
+   \item Double is penalties.
+\end{itemize}
 
 \item 1$\clubsuit$-(P)-1$\diamondsuit$-(anything): it's a good idea to subside quietly.  
 
