--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -187,7 +187,7 @@ Higher-level openings & natural. \\
       \item 1NT = 12--15 balanced; see ``Continuations after 1NT".
       \item minor suit bids deny a 4-card major.
 		\end{itemize}
-   \item 1N/2x = transfer weak jump shift 6+ card suit above, 0--7.
+   \item 1N/2x = transfer weak jump shift 6+ card suit above, 0--9.
 		\begin{itemize}
 		\item Complete the transfer with nothing more to say
 		\item 2N = extra values, nothing in the transfer suit
@@ -236,7 +236,7 @@ Higher-level openings & natural. \\
          Rebidding $\spadesuit$ denies the other top honour.
 		\end{itemize}
    \item 3$\clubsuit$/3$\diamondsuit$ = fit jump.
-   \item 3$\heartsuit$ = GF raise, two of AKQ.
+   \item 3$\heartsuit$ = GF raise, two of AKQ. (see ``Three-way encryption")
    \item 4$\clubsuit$/$\diamondsuit$/$\heartsuit$ = splinter agreeing spades
 	\end{itemize}
 
@@ -252,7 +252,7 @@ Higher-level openings & natural. \\
          Rebidding $\heartsuit$ denies the other top honour.
 		\end{itemize}
    \item 3$\clubsuit$/3$\diamondsuit$ = fit jump.
-   \item 3$\spadesuit$ = GF raise, two of AKQ.
+   \item 3$\spadesuit$ = GF raise, two of AKQ. (see ``Three-way encryption")
    \item 4$\clubsuit$/$\diamondsuit$/$\spadesuit$ = splinter agreeing hearts
 	\end{itemize}
 
@@ -272,7 +272,7 @@ Higher-level openings & natural. \\
          Rebidding $\spadesuit$ denies the other top honour.
 		\end{itemize}
    \item 3$\clubsuit$/3$\diamondsuit$ = fit jump.
-   \item 3$\heartsuit$ = GF raise, two of AKQ.
+   \item 3$\heartsuit$ = GF raise, two of AKQ. (see ``Three-way encryption")
    \item 4$\clubsuit$/$\diamondsuit$/$\heartsuit$ = splinter agreeing spades
 	\end{itemize}
 
@@ -721,6 +721,30 @@ or the other major and either minor (over a major). In all cases they are
 either weak or strong. Similarly, 2NT over a 1 level bid is unusual, showing
 5--5 or better in the minors (over a major) or the other minor and either major
 (over a minor). Again, it's weak or strong.
+
+After Michaels or Unusual, bidding any of the suits which could have been shown
+is pass or correct at that level. Overcaller then corrects to the next highest
+suit (or passes or raises) with a weak hand. With a strong hand he breaks to
+another suit. Of the two suits which are not 'pass or correct', re-cueing is
+strong and agreeing advancer's preferred suit and the other suit is strong with
+the remaining option.
+
+For example:
+\begin{itemize}
+\item (1$\heartsuit$)-2$\heartsuit$-(P)
+	\begin{itemize}
+	\item 3$\clubsuit$-3$\diamondsuit$ is weak with spades and diamonds
+	\item 3$\clubsuit$-3$\heartsuit$ is strong with spades and clubs
+	\item 3$\clubsuit$-3$\spadesuit$ is strong with spades and diamonds
+	\item 3$\diamondsuit$-3$\heartsuit$ is strong with spades and diamonds
+	\item 3$\diamondsuit$-3$\spadesuit$ is weak with spades and clubs
+	\item 3$\diamondsuit$-4$\clubsuit$ is strong with spades and clubs
+	\item 2$\spadesuit$-3$\clubsuit$ is strong with spades and clubs
+	\item 2$\spadesuit$-3$\diamondsuit$ is strong with spades and diamonds
+	\end{itemize}
+\end{itemize}
+
+
 
 \subsection{Defences}
 
