lightner and lebensohl

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -9,6 +9,7 @@
 \begin{document}
 
 \maketitle
+\tableofcontents
 
 \section{A brief history}
 
@@ -552,6 +553,8 @@ Lebensohl:
 		\item 3N: natural, promises a stop
 		\end{itemize}
 	\end{itemize}
+\item Double is for penalties
+\item Double of a natural 2$\clubsuit$ overcall is stayman showing a club stop (optional)
 \end{itemize}
 
 \section{Continuations after 2NT}
@@ -793,6 +796,10 @@ are Lebensohl responses. 4N is takeout over 4$\spadesuit$ and a big two suiter o
 
 Over a weak two,  2NT is natural showing 16-18 and ``Continuations after 2NT''
 apply.
+
+\section{Lightner Doubles}
+
+Doubles of freely bid slams are Lightner, asking for the lead of dummy's first shown suit.
 
 
 \section{Dealing with interference}
